--- a/source/html/index.html
+++ b/source/html/index.html
@@ -13,10 +13,12 @@
   </div>
 
   <div class="wrapper">
+    @@include("source/html/base/loader.html")
     @@include("source/html/base/header.html")
 
     <main>
       <div class="container">
+        @@include("source/html/base/main-content.html")
       </div>
     </main>
 
