--- a/source/html/index.html
+++ b/source/html/index.html
@@ -17,9 +17,7 @@
     @@include("source/html/base/header.html")
 
     <main>
-      <div class="container">
-        @@include("source/html/base/main-content.html")
-      </div>
+      @@include("source/html/base/intro.html")
     </main>
 
     @@include("source/html/base/footer.html")
